(PC-41715)[PRO] fix: prevent "Je le ferai plus tard" button from overlapping footer on mobile

--- a/pro/src/components/OnboardingOffersChoice/OnboardingOffersChoice.module.scss
+++ b/pro/src/components/OnboardingOffersChoice/OnboardingOffersChoice.module.scss
@@ -1,4 +1,5 @@
 @use "styles/mixins/_rem.scss" as rem;
+@use "styles/mixins/_size.scss" as size;
 
 .card-container {
   display: grid;
@@ -15,4 +16,8 @@
   width: 100%;
   display: flex;
   justify-content: center;
+
+  @media (max-width: size.$laptop) {
+    margin-bottom: var(--size-spacing-xxxxl);
+  }
 }
